# alternative-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  xmake.lua
assets/audio/: LICENCE
assets/shaders/: colored_triangle.frag  colored_triangle.vert  triangle.frag  triangle.vert
assets/textures/: avatar.alte-assets  icon.alte-asset
cmake/: FindImGui.cmake  assets_convertion.cmake  glslvalidator.cmake
projects/app/: App.cpp  App.hpp  CMakeLists.txt  main.cpp  xmake.lua
projects/app/src/: main.cpp
projects/app/src/entity/: Player.cpp  Player.hpp
projects/assets-converter/: CMakeLists.txt  xmake.lua
projects/assets-converter/src/: Converter.cpp  Converter.hpp  converter.cpp  converter.hpp  main.cpp
projects/assets-converter/src/types/: audio.cpp  audio.hpp  image.cpp  image.hpp  images.hpp
projects/assets-editor/: App.cpp  App.hpp  AppOnRender.cpp  CMakeLists.txt
projects/assetslib/: CMakeLists.txt  xmake.lua
projects/assetslib/include/assetslib/: assetslib.hpp  export.hpp
projects/assetslib/include/assetslib/assets/: AssetFile.hpp  AudioInfo.hpp  TextureInfo.hpp
projects/assetslib/src/: assetslib.cpp
projects/assetslib/src/assets/: AssetFile.cpp  AudioInfo.cpp  TextureInfo.cpp
projects/audio-test/: xmake.lua
projects/audio-test/src/: main.cpp
projects/audio-test/src/AL/: OpenALErrorCheck.hpp  al.cpp  al.hpp
projects/audio-test/src/objects/: MusicBuffer.cpp  MusicBuffer.hpp  SoundDevice.cpp  SoundDevice.hpp
projects/audio-test/src/ogg/: ogg.cpp  ogg.hpp
projects/engine/: CMakeLists.txt  xmake.lua
projects/engine/include/alte/: export.hpp
projects/engine/include/alte/ECS/: AudioComponent.hpp  AudioListenerComponent.hpp  TransformComponent.hpp
projects/engine/include/alte/audio/: AudioResource.hpp  Music.hpp  SoundFile.hpp  SoundSource.hpp  SoundStream.hpp
projects/engine/include/alte/core/: logger.hpp
projects/engine/include/alte/files/: AudioFile.hpp  TextureFile.hpp
projects/engine/include/alte/objects/: ECS.hpp  Entity.hpp  GameObject-inl.hpp  GameObject.hpp  Transformable.hpp
projects/engine/include/alte/types/: sleep.hpp  time.hpp  time.inl
projects/engine/includes/alte/: App.hpp
projects/engine/includes/alte/core/: logger.hpp
projects/engine/includes/alte/rendering/: Renderer.hpp
projects/engine/includes/alte/rendering/ImGui/: ImGui.hpp
projects/engine/includes/alte/rendering/vulkan/: Commandbuffers.hpp  Device.hpp  SwapChain.hpp  VulkanInstance.hpp
projects/engine/src/: App.cpp
projects/engine/src/ECS/: AudioComponent.cpp  AudioListenerComponent.cpp  Music.cpp  TransformComponent.cpp
projects/engine/src/application/: Window.cpp
projects/engine/src/core/: logger.cpp
projects/engine/src/files/: AudioFile.cpp  TextureFile.cpp
projects/engine/src/objects/: ECS.cpp  GameObject.cpp  Transformable.cpp
projects/engine/src/rendering/: Renderer.cpp
projects/engine/src/rendering/ImGui/: ImGui.cpp
projects/engine/src/rendering/vulkan/: Commandbuffers.cpp  Device.cpp  SwapChain.cpp  VulkanInstance.cpp
projects/engine/src/systems/audio/: AudioDevice.cpp  AudioDevice.hpp  AudioResource.cpp  SoundFile.cpp  SoundSource.cpp  SoundStream.cpp
projects/engine/src/systems/audio/AL/: OpenALErrorCheck.cpp  OpenALErrorCheck.hpp  al.hpp
projects/engine/src/types/: sleep.cpp
src/: main.cpp
src/engine/: App.cpp  App.hpp  sdl_utils.hpp
src/engine/application/: App.cpp  App.h  App.hpp  Window.cpp  Window.hpp
src/engine/core/: logger.cpp  logger.hpp
src/engine/rendering/: DeletionQueue.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  Renderer.cpp  Renderer.hpp  shader_utils.hpp  vk_abstract.cpp  vk_abstract.hpp
src/engine/rendering/ImGui/: ImGui.cpp  ImGui.hpp
src/engine/rendering/vulkan/: Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Pipeline.hpp  SwapChain.cpp  SwapChain.hpp  vk_abstract.cpp  vk_abstract.hpp
src/engine/rendering/vulkan/CommandBuffers/: Commandbuffers.cpp  Commandbuffers.hpp
src/engine/rendering/vulkan/Device/: Device.cpp  Device.hpp
src/engine/rendering/vulkan/SwapChain/: SwapChain.cpp  SwapChain.hpp
src/engine/rendering/vulkan/VulkanInstance/: VulkanInstance.cpp  VulkanInstance.hpp
